--- a/style.css
+++ b/style.css
@@ -8,8 +8,7 @@
 * {
   margin: 0;
   padding: 0;
-  /* Use border-box model to include padding and border in element size */
-  box-sizing: border-box;
+  box-sizing: border-box; /* Use border-box model to include padding and border in element size */
 }
 
 /* 
